# Corpmind

./: .env.example  .gitignore  main.py  pyproject.toml
config/: rate_limits.yaml  taxonomy.yaml
data/gold_set/: expected_outcomes.csv
data/sample_feeds/: empty_column.csv  missing_values.csv  mixed_encoding.csv
docs/: corpmind-implementation-plan.md  corpmind-scope-requirements.md
src/corpmind/: config.py  logging_config.py  taxonomy.py
src/corpmind/agents/: enrichment.py  evaluation.py  extraction.py  ingestion.py  matching.py
src/corpmind/eval/: ragas_harness.py
src/corpmind/graph/: build_graph.py  edges.py  nodes.py  tracing_config.py
src/corpmind/retrieval/: vector_store.py
src/corpmind/schemas/: __init__.py  audit.py  consistent.py  enrichment.py  evaluation.py  extraction.py  matching.py  raw.py  state.py
src/corpmind/tools/: web_search_tool.py
src/corpmind/utils/: batch_runner.py  rate_limiter.py
tests/: conftest.py
tests/unit/: test_config.py  test_enrichment.py  test_extraction.py  test_ingestion.py  test_matching.py  test_schemas.py  test_vector_store.py
